--- a/Streaming/streaming.tex
+++ b/Streaming/streaming.tex
@@ -349,7 +349,7 @@
 		\kappa_{\mathrm{los}} =& \left[ \left\langle v^4_{\mathrm{r}}\right\rangle - 4\left\langle v^3_{\mathrm{r}}\right\rangle\ \left\langle v_{\mathrm{r}}\right\rangle - 3\left\langle v^2_{\mathrm{r}}\right\rangle^2 + 12\left\langle v^2_{\mathrm{r}}\right\rangle\left\langle v_{\mathrm{r}}\right\rangle^2 - \right.\nonumber\\
 		&\left. 6\left\langle v_{\mathrm{r}}\right\rangle^4\right]\cos^4\theta + \left[\left\langle v^4_{\mathrm{T}} \right\rangle -3\left\langle v^2_{\mathrm{T}} \right\rangle^2\right]\sin^4\theta  \nonumber \\
 		& + 6\left[\left\langle  v^2_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle - \left\langle  v^2_{\mathrm{r}}\right\rangle \left\langle v^2_{\mathrm{T}}\right\rangle\right]\cos^2\theta\sin^2\theta \nonumber\\
-		& -12 \left[\left\langle  v_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle - \left\langle  v_{\mathrm{r}}\right\rangle \left\langle v^2_{\mathrm{T}}\right\rangle\right]\left\langle v_{\mathrm{r}}\right\rangle\cos^2\theta\sin^2\theta
+		& -12 \left\langle v_{\mathrm{r}}\right\rangle \left[\left\langle  v_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle - \left\langle  v_{\mathrm{r}}\right\rangle \left\langle v^2_{\mathrm{T}}\right\rangle\right]\cos^2\theta\sin^2\theta
 	\end{eqnarray}
 	\begin{eqnarray}
 		\kappa_{\mathrm{los}} = &\kappa_{\mathrm{r}}\cos^4\theta + \kappa_{\mathrm{T}}\sin^4\theta + 6\left[\mathrm{Cov}\left(v^2_{\mathrm{r}},v^2_{\mathrm{T}}\right) \right.\nonumber \\
