--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -362,7 +362,8 @@
 		\caption{Checking the equivalence of fourth cumulant as shown in Eq.~\ref{eq:c44}}.
 		\label{fig:4cum}
 	\end{figure}
-	The equivalence of Eq.~\ref{eq:c44} can be seen in Fig.~\ref{fig:4cum}.
+	\noindent The equivalence of Eq.~\ref{eq:c44} can be seen in Fig.~\ref{fig:4cum}. This also gives us an idea of how the non-Gaussian features of the $v_{\mathrm{los}}$ distribution comes about due to the covariance of $v_{\mathrm{r}}$ and $v_{\mathrm{T}}$.
+	
 	\section{Dissecting Velocity Distribution}
 	
 	To have a better understanding of the relative line-of-sight velocity distribution, it is important to know how halo and non-halo particles plays a role in the distribution. For this purpose, we classify the dark matter particles as either `halo' particles or `field' particle. This was done with the help of ROCKSTAR halo finder. Particles which were identified to belong to a halo were subsequently classified as `halo' particles and the rest as `field' particles.  
