--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -362,7 +362,7 @@
 		\caption{Checking the equivalence of fourth cumulant as shown in Eq.~\ref{eq:c44}}.
 		\label{fig:4cum}
 	\end{figure}
-	\noindent The equivalence of Eq.~\ref{eq:c44} can be seen in Fig.~\ref{fig:4cum}. This also gives us an idea of how the non-Gaussian features of the $v_{\mathrm{los}}$ distribution comes about due to the covariance of $v_{\mathrm{r}}$ and $v_{\mathrm{T}}$.
+	\noindent The equivalence of Eq.~\ref{eq:c44} can be seen in Fig.~\ref{fig:4cum}. This also gives us an idea of how the non-Gaussian features of the $v_{\mathrm{los}}$ distribution comes about due to the different covariance of radial and tangential velocity.
 	
 	\section{Dissecting Velocity Distribution}
 	
