--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -297,7 +297,7 @@
 	\subsubsection{Second cumulant}
 	The second cumulant of the relative line-of-sight velocity is related to its raw moments through
 	\begin{eqnarray}
-		\sigma^2_{\mathrm{los}} =  \left\langle v^2_{\mathrm{los}} \right\rangle - \left\langle v_{\mathrm{los}} \right\rangle^2 
+		\sigma^2_{\mathrm{los}} =  \left\langle v^2_{\mathrm{los}} \right\rangle - \left\langle v_{\mathrm{los}} \right\rangle^2  \, ,
 	\end{eqnarray}
 	\noindent where we already know the form of $\left\langle v_{\mathrm{los}} \right\rangle$. $\left\langle v^2_{\mathrm{los}} \right\rangle$ can be obtained by first squaring Eq.~\ref{eq:los_vel_equivalence} and then averaging it as below
 	\begin{eqnarray}\label{eq:v2}
@@ -306,13 +306,13 @@
 	
 	\noindent where we have used $\left\langle v_{\mathrm{r}} v_{\mathrm{T}}\right\rangle$ = 0. This has indeed been checked from the simulation and assured that this condition holds. In fact any term involving averaging of odd power of $v_{\mathrm{T}}$ disappears due to the isotropy.  The second cumulant is then given as 
 	\begin{eqnarray}\label{eq:c2}
-		\sigma^2_{\mathrm{los}} =  \sigma^2_{\mathrm{r}} \cos^2\theta + \sigma^2_{\mathrm{T}} \sin^2\theta
+		\sigma^2_{\mathrm{los}} =  \sigma^2_{\mathrm{r}} \cos^2\theta + \sigma^2_{\mathrm{T}} \sin^2\theta \, ,
 	\end{eqnarray}
 	\noindent where $\sigma^2_{\mathrm{r}} = \left\langle v^2_{\mathrm{r}} \right\rangle - \left\langle v_{\mathrm{r}}\right\rangle^2$ and $\sigma^2_{\mathrm{T}} = \left\langle v^2_{\mathrm{T}} \right\rangle$. We show that the Eq.~\ref{eq:c2} is indeed exact in Fig.~\ref{fig:cumulants}.
 	\subsubsection{Third cumulant}
 	\noindent The third cumulant of the relative line-of-sight velocity is connected to its raw moments as
 	\begin{eqnarray}\label{eq:third_c}
-		\gamma_{\mathrm{los}} = & \left\langle v^3_{\mathrm{los}} \right\rangle - 3 \left\langle v^2_{\mathrm{los}} \right\rangle \left\langle v_{\mathrm{los}}\right\rangle  + 2 \left\langle v_{\mathrm{los}}\right\rangle^3 
+		\gamma_{\mathrm{los}} = & \left\langle v^3_{\mathrm{los}} \right\rangle - 3 \left\langle v^2_{\mathrm{los}} \right\rangle \left\langle v_{\mathrm{los}}\right\rangle  + 2 \left\langle v_{\mathrm{los}}\right\rangle^3 \, ,
 	\end{eqnarray}
 	The form of $\left\langle v^3_{\mathrm{los}} \right\rangle$ can be obtained trivially by cubing Eq.~\ref{eq:los_vel_equivalence} and averaging it thereafter as below
 	\begin{eqnarray}\label{eq:v3}
@@ -321,10 +321,10 @@
 	\noindent It should be noted that following the isotropy argument again, $\left\langle  v^2_{\mathrm{r}}v_{\mathrm{T}}\right\rangle = \left\langle v^3_{\mathrm{T}}\right\rangle = 0$. This also has been verified from the simulations. Using Eqs.~\ref{eq:v1}, \ref{eq:v2} and \ref{eq:v3}, Eq.~\ref{eq:third_c} can be rewritten as
 	\begin{multline}
 		\gamma_{\mathrm{los}} = \mathrm{sgn}(r_{\parallel}) \left(\left[\left\langle v^3_{\mathrm{r}} \right\rangle - 3 \left\langle v^2_{\mathrm{r}} \right\rangle \left\langle v_{\mathrm{r}}\right\rangle  + 2 \left\langle v_{\mathrm{r}}\right\rangle^3\right]\cos^3\theta + \right.\\
-		\left. 3 \left[\left\langle  v_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle - \left\langle  v_{\mathrm{r}}\right\rangle \left\langle v^2_{\mathrm{T}}\right\rangle\right]\cos\theta\sin^2\theta\right)
+		\left. 3 \left[\left\langle  v_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle - \left\langle  v_{\mathrm{r}}\right\rangle \left\langle v^2_{\mathrm{T}}\right\rangle\right]\cos\theta\sin^2\theta\right) \, ,
 	\end{multline}
 	\begin{eqnarray}\label{eq:c3}
-		\gamma_{\mathrm{los}} = \mathrm{sgn}(r_{\parallel}) \cos\theta \left(\gamma_{\mathrm{r}}\cos^2\theta  + 3 \mathrm{Cov}\left[v_{\mathrm{r}},v^2_{\mathrm{T}}\right]\sin^2\theta \right)
+		\gamma_{\mathrm{los}} = \mathrm{sgn}(r_{\parallel}) \cos\theta \left(\gamma_{\mathrm{r}}\cos^2\theta  + 3 \mathrm{Cov}\left[v_{\mathrm{r}},v^2_{\mathrm{T}}\right]\sin^2\theta \right) \, .
 	\end{eqnarray}
 	\noindent Thus we see that the third cumulant of the relative line-of-sight velocity not only depends on the third cumulant of the radial component of the pairwise velocity but also the covariance between the radial and square of the tangential component of the pairwise velocity. This is similar to the form as mentioned in \citealt{uh15} and \citealt{bi2}, however we have explicitly derived the form and show the equivalence in Fig.~\ref{fig:cumulants}.
 	
@@ -338,23 +338,23 @@
 	The fourth cumulant of the relative line-of-sight velocity is given as
 	\begin{eqnarray}\label{eq:c4}
 		\kappa_{\mathrm{los}}  = & \left\langle v^4_{\mathrm{los}}\right\rangle - 4\left\langle v^3_{\mathrm{los}}\right\rangle\ \left\langle v_{\mathrm{los}}\right\rangle - 3\left\langle v^2_{\mathrm{los}}\right\rangle^2 \nonumber \\
-		& + 12\left\langle v^2_{\mathrm{los}}\right\rangle\left\langle v_{\mathrm{los}}\right\rangle^2 - 6\left\langle v_{\mathrm{los}}\right\rangle^4
+		& + 12\left\langle v^2_{\mathrm{los}}\right\rangle\left\langle v_{\mathrm{los}}\right\rangle^2 - 6\left\langle v_{\mathrm{los}}\right\rangle^4 \, .
 	\end{eqnarray}
 	The fourth raw moment of $v_{\mathrm{los}}$ is given taking the fourth power of Eq.~\ref{eq:los_vel_equivalence} and averaging as below
 	\begin{eqnarray}\label{eq:v4}
 		\left\langle v^4_{\mathrm{los}}\right\rangle = \left\langle v^4_{\mathrm{r}}\right\rangle\cos^4\theta + 6\left\langle v^2_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle  \cos^2\theta\sin^2\theta + \left\langle v^4_{\mathrm{T}}\right\rangle\sin^4\theta \, ,
 	\end{eqnarray}
-	Combining Eqs.~\ref{eq:v1}, \ref{eq:v2}, \ref{eq:v3} and \ref{eq:v4}, we can rewrite Eq.~\ref{eq:c4} as
+	\noindent where $\left\langle v^3_{\mathrm{r}}v_{\mathrm{T}}\right\rangle = \left\langle v_{\mathrm{r}}v^3_{\mathrm{T}}\right\rangle = 0$. Combining Eqs.~\ref{eq:v1}, \ref{eq:v2}, \ref{eq:v3} and \ref{eq:v4}, we can rewrite Eq.~\ref{eq:c4} as
 	\begin{eqnarray}
 		\kappa_{\mathrm{los}} =& \left[ \left\langle v^4_{\mathrm{r}}\right\rangle - 4\left\langle v^3_{\mathrm{r}}\right\rangle\ \left\langle v_{\mathrm{r}}\right\rangle - 3\left\langle v^2_{\mathrm{r}}\right\rangle^2 + 12\left\langle v^2_{\mathrm{r}}\right\rangle\left\langle v_{\mathrm{r}}\right\rangle^2 - \right.\nonumber\\
 		&\left. 6\left\langle v_{\mathrm{r}}\right\rangle^4\right]\cos^4\theta + \left[\left\langle v^4_{\mathrm{T}} \right\rangle -3\left\langle v^2_{\mathrm{T}} \right\rangle^2\right]\sin^4\theta  \nonumber \\
 		& + 6\left[\left\langle  v^2_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle - \left\langle  v^2_{\mathrm{r}}\right\rangle \left\langle v^2_{\mathrm{T}}\right\rangle\right]\cos^2\theta\sin^2\theta \nonumber\\
-		& -12 \left\langle v_{\mathrm{r}}\right\rangle \left[\left\langle  v_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle - \left\langle  v_{\mathrm{r}}\right\rangle \left\langle v^2_{\mathrm{T}}\right\rangle\right]\cos^2\theta\sin^2\theta
+		& -12 \left\langle v_{\mathrm{r}}\right\rangle \left[\left\langle  v_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle - \left\langle  v_{\mathrm{r}}\right\rangle \left\langle v^2_{\mathrm{T}}\right\rangle\right]\cos^2\theta\sin^2\theta \,.
 	\end{eqnarray}
 	Rewriting it in a more compact form, we get
 	\begin{eqnarray}\label{eq:c44}
 		\kappa_{\mathrm{los}} = &\kappa_{\mathrm{r}}\cos^4\theta + \kappa_{\mathrm{T}}\sin^4\theta + 6\left[\mathrm{Cov}\left(v^2_{\mathrm{r}},v^2_{\mathrm{T}}\right) \right.\nonumber \\
-		& \left. - 2\left\langle v_{\mathrm{r}}\right\rangle \mathrm{Cov}\left(v_{\mathrm{r}},v^2_{\mathrm{T}}\right)\right]\cos^2\theta\sin^2\theta
+		& \left. - 2\left\langle v_{\mathrm{r}}\right\rangle \mathrm{Cov}\left(v_{\mathrm{r}},v^2_{\mathrm{T}}\right)\right]\cos^2\theta\sin^2\theta \,.
 	\end{eqnarray}
 	\begin{figure}
 		\centering
@@ -362,7 +362,7 @@
 		\caption{Checking the equivalence of fourth cumulant as shown in Eq.~\ref{eq:c44}}.
 		\label{fig:4cum}
 	\end{figure}
-	\noindent The equivalence of Eq.~\ref{eq:c44} can be seen in Fig.~\ref{fig:4cum}. This also gives us an idea of how the non-Gaussian features of the $v_{\mathrm{los}}$ distribution comes about due to the different covariance of radial and tangential velocity in the higher cumulants.
+	\noindent The equivalence of Eq.~\ref{eq:c44} can be seen in Fig.~\ref{fig:4cum}. This also gives us an idea of how the non-Gaussian features of the $v_{\mathrm{los}}$ distribution comes about due to the different covariance between the radial and tangential velocity in the higher cumulants.
 	
 	\subsection{Dissecting Velocity Distribution}
 	
