--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -344,7 +344,7 @@
 	\begin{eqnarray}\label{eq:v4}
 		\left\langle v^4_{\mathrm{los}}\right\rangle = \left\langle v^4_{\mathrm{r}}\right\rangle\cos^4\theta + 6\left\langle v^2_{\mathrm{r}}v^2_{\mathrm{T}}\right\rangle  \cos^2\theta\sin^2\theta + \left\langle v^4_{\mathrm{T}}\right\rangle\sin^4\theta \, ,
 	\end{eqnarray}
-	\noindent where $\left\langle v^3_{\mathrm{r}}v_{\mathrm{T}}\right\rangle = \left\langle v_{\mathrm{r}}v^3_{\mathrm{T}}\right\rangle = 0$. Combining Eqs.~\ref{eq:v1}, \ref{eq:v2}, \ref{eq:v3} and \ref{eq:v4}, we can rewrite Eq.~\ref{eq:c4} as
+	\noindent where we have used the fact that $\left\langle v^3_{\mathrm{r}}v_{\mathrm{T}}\right\rangle = \left\langle v_{\mathrm{r}}v^3_{\mathrm{T}}\right\rangle = 0$. Combining Eqs.~\ref{eq:v1}, \ref{eq:v2}, \ref{eq:v3} and \ref{eq:v4}, we can rewrite Eq.~\ref{eq:c4} as
 	\begin{eqnarray}
 		\kappa_{\mathrm{los}} =& \left[ \left\langle v^4_{\mathrm{r}}\right\rangle - 4\left\langle v^3_{\mathrm{r}}\right\rangle\ \left\langle v_{\mathrm{r}}\right\rangle - 3\left\langle v^2_{\mathrm{r}}\right\rangle^2 + 12\left\langle v^2_{\mathrm{r}}\right\rangle\left\langle v_{\mathrm{r}}\right\rangle^2 - \right.\nonumber\\
 		&\left. 6\left\langle v_{\mathrm{r}}\right\rangle^4\right]\cos^4\theta + \left[\left\langle v^4_{\mathrm{T}} \right\rangle -3\left\langle v^2_{\mathrm{T}} \right\rangle^2\right]\sin^4\theta  \nonumber \\
@@ -355,6 +355,13 @@
 	\begin{eqnarray}\label{eq:c44}
 		\kappa_{\mathrm{los}} = &\kappa_{\mathrm{r}}\cos^4\theta + \kappa_{\mathrm{T}}\sin^4\theta + 6\left[\mathrm{Cov}\left(v^2_{\mathrm{r}},v^2_{\mathrm{T}}\right) \right.\nonumber \\
 		& \left. - 2\left\langle v_{\mathrm{r}}\right\rangle \mathrm{Cov}\left(v_{\mathrm{r}},v^2_{\mathrm{T}}\right)\right]\cos^2\theta\sin^2\theta \,.
+	\end{eqnarray}
+	\noindent where we have used the fact that $\kappa_{\mathrm{r}}$ and $\kappa_{\mathrm{T}}$ are given as below
+	\begin{eqnarray}
+		\kappa_{\mathrm{r}} =  \left\langle v^4_{\mathrm{r}}\right\rangle - 4\left\langle v^3_{\mathrm{r}}\right\rangle \left\langle v_{\mathrm{r}}\right\rangle - 3\left\langle v^2_{\mathrm{r}}\right\rangle^2 + 12\left\langle v^2_{\mathrm{r}}\right\rangle \left\langle v_{\mathrm{r}}\right\rangle^2 - 6\left\langle v_{\mathrm{r}}\right\rangle^4 \, ,
+	\end{eqnarray}
+	\begin{eqnarray}
+		\kappa_{\mathrm{T}} = \left\langle v^4_{\mathrm{T}} \right\rangle -3\left\langle v^2_{\mathrm{T}} \right\rangle^2 \, .
 	\end{eqnarray}
 	\begin{figure}
 		\centering
