--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -417,9 +417,9 @@
 		C\left(\lambda, \alpha,\beta,\delta,\mu\right) = \frac{\left(\alpha^2-\beta^2\right)^{\frac{\lambda}{2}}}{\sqrt{2\pi}\alpha^{\lambda - 1/2}\delta^\lambda K_{\lambda}\left(\delta\sqrt{\alpha^2-\beta^2}\right)}  \, ,
 	\end{eqnarray}
 	
-	\noindent where $K_{\lambda}$ is the modified Bessel function of the third kind with index of $\lambda$.
+	\noindent where $K_{\lambda}$ is the modified Bessel function of the third kind with index of $\lambda$. The strength of GH distribution is that it has many subclasses and in limiting cases can take the form of Gaussian, Student-t, hyperbolic and other distributions. 
 	
-	GH is the mixture modelling consisting of normal distribution and Generalised Inverse Gaussian distribution. 
+	GH is the mixture modeling consisting of normal distribution and Generalised Inverse Gaussian distribution. 
 	
 	\section{Conclusions}
 	
