--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -406,7 +406,7 @@
 
 	\section{Phenomenological Model}
 
-	In prior sections, we showed the validity of the streaming equation and how different components contribute to the distribution. However we would like to have a phenomenological model to describe the relative line-of-sight velocity and use that in the streaming equation. Looking into the literature for semi-heavy tailed distribution, we were able to use generalised hyperbolic distribution to model the $v_{\mathrm{los}}$ PDF. The distribution can be characterised as
+	In prior sections, we showed the validity of the streaming equation and how different components contribute to the distribution. However we would like to have a phenomenological model to describe the relative line-of-sight velocity and use that in the streaming equation. Looking into the literature for semi-heavy tailed distribution, we were able to use generalised hyperbolic (GH) distribution to model the $v_{\mathrm{los}}$ PDF. The distribution can be characterised as
 	
 	\begin{multline}
 		f_{\mathrm{GH}}(x) = C\left(\lambda, \alpha,\beta,\delta,\mu\right) \left[\delta^2+\left(x-\mu\right)^2\right]^{\frac{\lambda-1/2}{2}}  \\
@@ -417,9 +417,10 @@
 		C\left(\lambda, \alpha,\beta,\delta,\mu\right) = \frac{\left(\alpha^2-\beta^2\right)^{\frac{\lambda}{2}}}{\sqrt{2\pi}\alpha^{\lambda - 1/2}\delta^\lambda K_{\lambda}\left(\delta\sqrt{\alpha^2-\beta^2}\right)}  \, ,
 	\end{eqnarray}
 	
-	\noindent where $K_{\lambda}$ is the modified Bessel function of the third kind with index of $\lambda$. The strength of GH distribution is that it has many subclasses and in limiting cases can take the form of Gaussian, Student-t, hyperbolic and other distributions. 
-	
-	GH is the mixture modeling consisting of normal distribution and Generalised Inverse Gaussian distribution. 
+	\noindent where $K_{\lambda}$ is the modified Bessel function of the third kind with index of $\lambda$. The strength of GH distribution is that it has many subclasses and in limiting cases can take the form of Gaussian, Student-t, hyperbolic and other distributions. It is also possible to represent GH as mixture of an normal distribution with some mixing distribution. It could be written as below
+	\begin{eqnarray}
+		f_{\mathrm{GH}}(x) = \int  
+	\end{eqnarray}
 	
 	\section{Conclusions}
 	
