--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -406,7 +406,7 @@
 
 	\section{Phenomenological Model}
 
-	In prior sections, we showed the validity of the streaming equation and how different components contribute to the distribution. However we would like to have a phenomenological model to describe the relative line-of-sight velocity and use that in the streaming equation. Looking into the literature for semi-heavy tailed distribution, we were able to use generalised hyperbolic (GH) distribution to model the $v_{\mathrm{los}}$ PDF. The distribution can be characterised as
+	In prior sections, we showed the validity of the streaming equation and how different components contribute to the distribution. However we would like to have a phenomenological model to describe the relative line-of-sight velocity and use that in the streaming equation. We were able to use generalised hyperbolic (GH) distribution to model the $v_{\mathrm{los}}$ PDF. The distribution can be characterised as
 	
 	\begin{multline}
 		f_{\mathrm{GH}}(x) = C\left(\lambda, \alpha,\beta,\delta,\mu\right) \left[\delta^2+\left(x-\mu\right)^2\right]^{\frac{\lambda-1/2}{2}}  \\
