--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -409,7 +409,7 @@
 	In prior sections, we showed the validity of the streaming equation and how different components contribute to the distribution. However we would like to have a phenomenological model to describe the relative line-of-sight velocity and use that in the streaming equation. We were able to use generalised hyperbolic (GH) distribution to model the $v_{\mathrm{los}}$ PDF. The distribution can be characterised as
 	
 	\begin{multline}
-		f_{\mathrm{GH}}(x) = C\left(\lambda, \alpha,\beta,\delta,\mu\right) \left[\delta^2+\left(x-\mu\right)^2\right]^{\frac{\lambda-1/2}{2}}  \\
+		f_{\mathrm{GH}}(x|\lambda, \alpha,\beta,\delta,\mu) = C\left(\lambda, \alpha,\beta,\delta,\mu\right) \left[\delta^2+\left(x-\mu\right)^2\right]^{\frac{\lambda-1/2}{2}}  \\
 		\exp\left[\beta\left(x-\mu\right)\right] K_{\lambda-\frac{1}{2}}\left(\alpha\sqrt{\delta^2+(x-\mu)^2}\right) \, ,
 	\end{multline}
 	\noindent where $C\left(\lambda, \alpha,\beta,\delta,\mu\right)$ is the normalisation term and it is given by
@@ -417,9 +417,9 @@
 		C\left(\lambda, \alpha,\beta,\delta,\mu\right) = \frac{\left(\alpha^2-\beta^2\right)^{\frac{\lambda}{2}}}{\sqrt{2\pi}\alpha^{\lambda - 1/2}\delta^\lambda K_{\lambda}\left(\delta\sqrt{\alpha^2-\beta^2}\right)}  \, ,
 	\end{eqnarray}
 	
-	\noindent where $K_{\lambda}$ is the modified Bessel function of the third kind with index of $\lambda$. The strength of GH distribution is that it has many subclasses and in limiting cases can take the form of Gaussian, Student-t, hyperbolic and other distributions. It is also possible to represent GH as mixture of an normal distribution with some mixing distribution. It could be written as below
+	\noindent where $K_{\lambda}$ is the modified Bessel function of the third kind with index of $\lambda$. The parameter $\lambda$ characterises certain subclasses. The influence of the other parameters can be characterised as follows: $\alpha$ influences the shape, $\beta$ the skewness, $\delta$ the scale and $\mu$ acts as a location parameter. The strength of GH distribution is that it has many subclasses and in limiting cases can take the form of Gaussian, Student-t, hyperbolic and other distributions. It is also possible to represent GH as mixture of an normal distribution with some mixing distribution. It could be written as below
 	\begin{eqnarray}
-		f_{\mathrm{GH}}(x) = \int  
+		f_{\mathrm{GH}}(x|\lambda, \alpha,\beta,\delta,\mu) = \int  N(x | \mu + \beta y, y) * f_{\mathrm{GIG}}(y | \lambda, \delta^2, \alpha^2-\beta^2) \dif y
 	\end{eqnarray}
 	
 	\section{Conclusions}
