--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -418,9 +418,10 @@
 	\end{eqnarray}
 	
 	\noindent where $K_{\lambda}$ is the modified Bessel function of the third kind with index of $\lambda$. The parameter $\lambda$ characterises certain subclasses. The influence of the other parameters can be characterised as follows: $\alpha$ influences the shape, $\beta$ the skewness, $\delta$ the scale and $\mu$ acts as a location parameter. The strength of GH distribution is that it has many subclasses and in limiting cases can take the form of Gaussian, Student-t, hyperbolic and other distributions. It is also possible to represent GH as mixture of an normal distribution with some mixing distribution. It could be written as below
-	\begin{eqnarray}
-		f_{\mathrm{GH}}(x|\lambda, \alpha,\beta,\delta,\mu) = \int  N(x | \mu + \beta y, y) * f_{\mathrm{GIG}}(y | \lambda, \delta^2, \alpha^2-\beta^2) \dif y
-	\end{eqnarray}
+	\begin{multline}
+		f_{\mathrm{GH}}(x|\lambda, \alpha,\beta,\delta,\mu) = \int  N(x | \mu + \beta y, y) \\
+		* f_{\mathrm{GIG}}(y | \lambda, \delta^2, \alpha^2-\beta^2) \dif y
+	\end{multline}
 	
 	\section{Conclusions}
 	
