--- a/01_Streaming/streaming.tex
+++ b/01_Streaming/streaming.tex
@@ -422,7 +422,7 @@
 		f_{\mathrm{GH}}(x|\lambda, \alpha,\beta,\delta,\mu) = \int  N(x | \mu + \beta y, y) \\
 		* f_{\mathrm{GIG}}(y | \lambda, \delta^2, \alpha^2-\beta^2) \dif y
 	\end{multline}
-	This is similar to
+	This is similar to Tinker
 	\section{Conclusions}
 	
 	
